<resources>
    <string name="action_menu">Menu</string>
    <string name="setting">설정</string>
    <string name="bookmark">즐겨찾기</string>
    <string name="notification">알림</string>
    <string name="keyword">키워드</string>
    <string name="notification_state">알림 받기</string>
    <string name="input_keyword">키워드</string>
    <string name="keyword_helper_text">키워드가 포함된 공지사항의 알림을 받을 수 있어요</string>
    <string name="added_keyword">알림 받을 키워드</string>

    <!-- ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ -->

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="author_label">작성자</string>
    <string name="post_date">작성일</string>
    <string name="post_num">12345</string>
    <string name="post_title">게시물 제목</string>
    <string name="post_text">게시물 내용</string>
    <string name="bullet">[교내활동]</string>
    <string name="board">일반공지</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>

    <string name="firebase_notification_channel_id">CHANNEL_ID</string>
    <string name="subscribe">등록</string>
    <string name="database_error">키워드를 등록하지 못했습니다</string>
    <string name="network_error">네트워크 상태를 확인해주세요</string>
    <string name="text_attached_file">첨부파일</string>
    <string name="text_download_all">모두 다운로드</string>
    <string name="search">검색</string>
    <string name="bulletin">게시판</string>
    <string name="author">작성자</string>
    <string name="no_date">0000-00-00</string>
    <string name="view_count">조회수</string>
    <string name="external_link">웹페이지</string>
</resources>