<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="8dp"
    android:paddingVertical="6dp"
    android:background="@drawable/background_ripple">

    <View
        android:id="@+id/view_highlight"
        android:layout_width="3dp"
        android:layout_height="0dp"
        android:background="@color/light_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_title"
        style="@style/text_small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        tools:text="@string/post_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/author"
        style="@style/text_smaller"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@id/text_view_title"
        app:layout_constraintTop_toBottomOf="@id/text_view_title" />

    <View
        android:id="@+id/view_divider"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginStart="6dp"
        android:background="@color/light_gray"
        app:layout_constraintStart_toEndOf="@id/text_view_author"
        app:layout_constraintTop_toTopOf="@id/text_view_author"
        app:layout_constraintBottom_toBottomOf="@id/text_view_author" />

    <TextView
        android:id="@+id/text_view_view_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_count"
        style="@style/text_smaller"
        android:layout_marginStart="6dp"
        app:layout_constraintStart_toEndOf="@id/view_divider"
        app:layout_constraintTop_toTopOf="@id/text_view_author"
        app:layout_constraintBottom_toBottomOf="@id/text_view_author" />

    <TextView
        android:id="@+id/text_view_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/no_date"
        style="@style/text_smaller"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_author"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_title" />


</androidx.constraintlayout.widget.ConstraintLayout>

