<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.keyword.KeywordFragment"
    android:padding="30dp">

    <EditText
        android:id="@+id/edit_text_keyword_input"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="@string/input_keyword"
        android:inputType="textPersonName"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="12dp"
        android:textSize="14sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_subscribe"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/button_subscribe"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/subscribe"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/edit_text_keyword_input"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/edit_text_keyword_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_text_keyword_input" />

    <TextView
        android:id="@+id/text_view_keyword_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_title_large"
        android:text="@string/added_keyword"
        app:layout_constraintTop_toBottomOf="@id/edit_text_keyword_input"
        app:layout_constraintStart_toStartOf="@id/edit_text_keyword_input"
        android:layout_marginTop="30dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_keyword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_view_keyword_title"
        android:layout_marginTop="30dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>